# dotfiles

./: .clang-format  .env.example  .env.test  .gdbinit  .gitattributes  .gitconfig  .gitignore  .tmux.conf  .tmux.line  .vimrc  Cargo.toml  Dockerfile  Makefile  README.md  build.zig  build.zig.zon  deps.nix  digest.txt  docker-compose.json  docker-compose.yml  dotfiles.cabal  environment.go  environment.ncl  environment.nix  flake.nix  generate_vscode_extensions.sh  go.mod  go.sum  install.sh  inventory  localhost.yml  localhost_digests.yml  playbook.yml  rustfmt.toml  treefmt.nix  vscode_extensions.sh
.config/i3/: config
.config/i3status/: config
.gdb/: offsetsof.py  offsetsof_python2.py
ancestry/vnext/: Cargo.toml
ancestry/vnext/dotfiles-build/: Cargo.toml
ancestry/vnext/dotfiles-build/src/: main.rs
ansible-playbooks/: aur_helper.yml  dnf_packages.yml  extra-vars.yml.example  main.yml  pacman_packages.yml
ansible-playbooks/examples/: environment.yml  hello_world.yml  list_directories.yml  terminate-instances.yml
ansible-playbooks/tasks/: aur_helper.yml  dnf_packages.yml  pacman_packages.yml
ansible-playbooks/vars/: dotfiles.yml.example  env.yml.example  theme.yml
app/builtins/: Main.hs
app/eject/: Main.hs
app/os-release/: Main.hs
app/playground/: Main.hs
app/scripts/: Main.hs
app/update-hashes/: Main.hs
bootstrap/: nix-config.sh  nix-install.sh  nix-user-chroot.sh
cmd/: dockercompose.go  environment.go  graph.go  roleimport.go  root.go  template.go
cmd/agenix/: agenix.go  key.go  secret.go
cmd/canary/: main.go
cmd/codegen/: codegen.go  encryption.go  hash.go  profiles.go  roles.go
cmd/df-decrypt/: main.go
cmd/df-encrypt/: main.go
cmd/dotfiles-cli/: main.go
cmd/homeage/: homeage.go  key.go  secret.go
cmd/homemanager/: bootstrap.go  eject.go  homemanager.go
cmd/secret/: decrypt.go  encrypt.go  key.go  secret.go
cmd/update-hashes/: main.go
cmd/windows/: bootstrap.go  elevate.go  windows.go
core/user/: roles.nix
docker/: Dockerfile  eject.Dockerfile  proot.Dockerfile
homes/basic/: default.nix
homes/docker/: default.nix
homes/work0/: default.nix
homes/work1/: default.nix
homes/work2/: default.nix
homes/wsl/: default.nix
hosts/infinity/: default.nix  hardware-configuration.nix
hosts/macbook/: default.nix
internal/accesslevel/: accesslevel.go  accesslevel_enumer.go
internal/asset/: asset.go  template.go
internal/assets/: assets.go
internal/choice/: choice.go
internal/codegen/: marshaler.go  nixstringee.go  privilegelevelfuncmap.go
internal/config/: config.go
internal/encryption/: encryption.go  encryption_enumer.go  encryption_marshaler.go  encryption_nixstringee.go
internal/generic/: generic.go
internal/hash/: hash.go
internal/log/: handler.go  log.go  logger.go
internal/logdisabled/: logdisabled.go
internal/nix/: darwin.go  hash.go  homemanager.go  nix.go  nixos.go
internal/nixinternal/: fakehash.go
internal/nixutil/: darwin.go  hash.go  homemanager.go  nixos.go  nixutil.go
internal/privilegelevel/: privilegelevel.go  privilegelevel_enumer.go  privilegelevel_marshaler.go  privilegelevel_nixstringee.go
internal/shell/: commandbuilder.go  commandbuilder_test.go  shell.go  verbosity.go
internal/shellx/: gitcrypt.go  shellx.go
lib/: build.nix  builtins.nix  common.go  common.nix  common.sh  default.nix  environment-schema.ncl  profiles.nix  role.ncl  user-schema.ncl  user.nix  vendor.nix
lib/assets/: assets.go
lib/contracts/: enum-record.ncl
lib/enums/: codegen.go  reflect.go  reflect_codegen.go  reflect_gen.go  role.go  role.ncl  role_gen.go  role_string.go  system.ncl  systemprofile.go  systemprofile_enumer.go  systemprofile_gen.go  systemprofile_string.go  systemrole.go  systemrole_gen.go  systemrole_string.go  theme.go  theme.ncl  theme_gen.go  theme_string.go  user-profile.ncl  userprofile.go  userprofile_enumer.go  userprofile_gen.go  userprofile_string.go  userrole.go  userrole_gen.go  userrole_string.go
lib/flags/: flags.go
lib/interfaces/: profile.go  role.go
lib/profiles/: codegen.go  darwin.go  darwin_gen.go  homemanager.go  linux.go  linux_gen.go  nixos.go  nixos_gen.go  profiles_codegen.go  profiles_gen.go  wsl.go  wsl_gen.go
lib/schemas/: environment.ncl  theme.ncl
lib/structs/: dockercompose.go  environment.go  profile.go  theme.go  user.go
lib/themes/: chalk.go  grayscale.go  grayscale.ncl  matrix.go  matrix.ncl  mocha.go  ocean.go  one-dark.ncl  onedark.go  themes.go  themes_codegen.go  themes_gen.go  tomorrow.go  twilight.go
lib/utils/: base62.go  caser.go  choice.go  generic.go  randseq.go  shell.go
notes/: arch_notes.md  etc_crypttab  etc_default_grub  etc_dnf_dnf_conf  etc_dracut_conf  etc_fstab  fedora_notes.md
overlays/: default.nix  nix-plugins-nix-2.33.patch
scripts/: arch_bootstrap.sh  archi  archi.py  chroot.sh  encrypt-secrets.sh  fedora_bootstrap.sh  gen-master-key.sh  home-manager-bootstrap.sh  home-manager-eject.sh  homeage-key.sh  homeage-secret.sh  nix-bind-mount.sh  nix-bootstrap.sh  nix-chroot.sh  nix-config.ab  nix-config.bash  nix-config.sh  nix-config.zsh  nix-install.ab  nix-install.bash  nix-install.sh  nix-install.zsh  nix-static-bootstrap.sh  nix-user-chroot.ab  nix-user-chroot.bash  nix-user-chroot.sh  nix-user-chroot.zsh  proot-bootstrap.sh  proot.ab  proot.bash  proot.sh  proot.zsh
secrets/: .encrypted  bookmarks.html.age  secrets.nix  smb-data-creds.age  work-email.age  work_email.age
src/: Makefile  Role.partial.dhall  RoleConfig.partial.dhall  cli.zig  environment.dhall  environment.partial.dhall.ctemplate.dhall  inventory.template.dhall  lib.rs  logger.rs  main.rs  main.zig  mode.zig  name.rs  playbook.dhall  profile.rs  profile.zig  profiles.zig  role.rs  role.zig  type.rs
system/: roles.nix
templates/: profiles.nix.gotmpl  role.nix.gotmpl  roles.nix.gotmpl
user/: roles.nix
v2/: .gitignore
vnext/: .gitignore  Cargo.toml  rustfmt.toml
vnext/dotfiles-build/: Cargo.toml
vnext/dotfiles-build/src/: main.rs
vnext/dotfiles-core/: Cargo.toml
vnext/dotfiles-core/src/: command.rs  lib.rs
(+976 files in other folders)
