[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
handlebars = "4.5"
log = "0.4"
log4rs = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
