cabal-version:   3.0
name:            dotfiles
version:         0.1.0.0
license:         AGPL-3.0-or-later
license-file:    LICENSE
author:          Hansel De La Cruz
maintainer:      18725263+hanselrd@users.noreply.github.com
build-type:      Simple
extra-doc-files: README.md

flag secrets
  default: False
  manual:  True

common ghc-options
  ghc-options:
    -Wall -Wcompat -Werror=incomplete-patterns -Wextra
    -Wincomplete-uni-patterns -Wno-type-defaults -Wno-unused-matches
    -fno-warn-name-shadowing -fprint-potential-instances -threaded

common exe-ghc-options
  import:      ghc-options
  ghc-options: -rtsopts -with-rtsopts=-N

common default-extensions
  default-extensions:
    BangPatterns
    CPP
    DuplicateRecordFields
    ExtendedDefaultRules
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    TemplateHaskell
    TypeApplications

common build-depends
  build-depends:
    , async
    , directory
    , exceptions
    , flow
    , MissingH
    , monad-logger
    , monad-logger-extras
    , mtl
    , optparse-applicative
    , os-release
    , process
    , random
    , raw-strings-qq
    , regex-tdfa
    , shell-monad
    , split
    , stm
    , string-combinators
    , template-haskell
    , temporary
    , text
    , time
    , transformers
    , unix
    , unliftio
    , unliftio-core

common exe-build-depends
  import:        build-depends
  build-depends:

common cpp-options
  if flag(secrets)
    cpp-options: -DSECRETS

library
  import:           ghc-options, default-extensions, build-depends, cpp-options
  exposed-modules:
    Dotfiles.Application
    Dotfiles.Builtins
    Dotfiles.Nix
    Dotfiles.Scripts
    Dotfiles.Shell

  if flag(secrets)
    exposed-modules: Dotfiles.Secrets.Scripts

  other-modules:    Paths_dotfiles
  build-depends:    base ^>=4.20.2.0
  hs-source-dirs:   src

  if flag(secrets)
    hs-source-dirs: secrets/src

  default-language: Haskell2010

executable builtins
  import:
    exe-ghc-options, default-extensions, exe-build-depends, cpp-options

  main-is:          Main.hs
  other-modules:    Paths_dotfiles
  build-depends:
    , base      ^>=4.20.2.0
    , dotfiles

  hs-source-dirs:   app/builtins
  default-language: Haskell2010

executable scripts
  import:
    exe-ghc-options, default-extensions, exe-build-depends, cpp-options

  main-is:          Main.hs
  other-modules:    Paths_dotfiles
  build-depends:
    , base      ^>=4.20.2.0
    , dotfiles

  hs-source-dirs:   app/scripts
  default-language: Haskell2010

executable playground
  import:
    exe-ghc-options, default-extensions, exe-build-depends, cpp-options

  main-is:          Main.hs
  other-modules:    Paths_dotfiles
  build-depends:
    , base      ^>=4.20.2.0
    , dotfiles

  hs-source-dirs:   app/playground
  default-language: Haskell2010

executable os-release
  import:
    exe-ghc-options, default-extensions, exe-build-depends, cpp-options

  main-is:          Main.hs
  other-modules:    Paths_dotfiles
  build-depends:
    , base      ^>=4.20.2.0
    , dotfiles

  hs-source-dirs:   app/os-release
  default-language: Haskell2010

executable eject
  import:
    exe-ghc-options, default-extensions, exe-build-depends, cpp-options

  main-is:          Main.hs
  other-modules:    Paths_dotfiles
  build-depends:
    , base      ^>=4.20.2.0
    , dotfiles

  hs-source-dirs:   app/eject
  default-language: Haskell2010

executable update-hashes
  import:
    exe-ghc-options, default-extensions, exe-build-depends, cpp-options

  main-is:          Main.hs
  other-modules:    Paths_dotfiles
  build-depends:
    , base      ^>=4.20.2.0
    , dotfiles

  hs-source-dirs:   app/update-hashes
  default-language: Haskell2010

test-suite dotfiles-test
  import:           ghc-options, default-extensions, build-depends, cpp-options
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base      ^>=4.20.2.0
    , dotfiles
