[package]
name = "dotfiles-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.17"
dfa = { version = "0.1.0", path = "../dotfiles-ansible", package = "dotfiles-ansible" }
dfc = { version = "0.1.0", path = "../dotfiles-core", package = "dotfiles-core" }
dft = { version = "0.1.0", path = "../dotfiles-types", package = "dotfiles-types" }
serde_yaml = "0.9.10"
toml = "0.5.9"
